change /resume to /src, remove resume.html

--- a/src/resume-app/resume-app.html
+++ b/src/resume-app/resume-app.html
@@ -440,7 +440,7 @@
 
         this.hidden = false;
 
-        superagent.get('/resume/json/page' + pid + '.json').end(callback.bind(this));
+        superagent.get('/src/json/page' + pid + '.json').end(callback.bind(this));
       },
       _setPage: function (e) {
         e.preventDefault();
