--- a/index.html
+++ b/index.html
@@ -6,22 +6,73 @@
     <meta name="language" content="zh_TW">
     <meta name="robots" content="noarchive">
     <meta name="geo.country" content="tw">
-    <meta name="author" content="PetarLai">
+    <meta name="author" content="Petar Lai">
     <link rel="icon" type="png" src="/src/img/favicon.png">
 
-    <title>resume</title>
-    <meta name="description" content="resume description">
+    <title>Peter Lai</title>
+    <meta name="description" content="Peter Lai">
 
     <link rel="manifest" href="/manifest.json">
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/superagent/3.5.2/superagent.min.js" integrity="sha256-+Q9O9GgDgx2GQxSNMzEIYgzPhcJWwURnlq46eymtmEE=" crossorigin="anonymous"></script>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.24/webcomponents-lite.min.js" integrity="sha256-q+I+4ZaOa01gHfT1R816zmRrFdUg8XHUzW5dStiV4Sc=" crossorigin="anonymous"></script>
-    <script src="//www.google-analytics.com/analytics.js" async defer></script>
-
-    <link rel="import" href="/src/resume-app/resume-app.html">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous">
   </head>
   <body>
-    <resume-app></resume-app>
+    <section class="hero is-medium is-dark is-bold">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Working on the decentralized and network stuff......
+          </h1>
+          <h2 class="subtitle">
+            Smart contact? Consensus? Blockchain? DLT? Proxy?
+          </h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h1 class="title">Side projects</h1>
+        <h2 class="subtitle">
+          I write code to solve my problems and for fun. Here are my side projects.
+        </h2>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h1 class="title">Blockchain related</h1>
+        <h2 class="subtitle">diode.io <a href="https://github.com/diodechain">link</a></h2>
+        <h2 class="subtitle">web3p <a href="https://github.com/web3p">link</a></h2>
+        <h2 class="subtitle">frontend <a href="https://github.com/sc0vu/vuethwallet">vuethwallet</a> <a href="https://github.com/sc0vu/vuethexplore">vuethexplore</a></h2>
+        <h2 class="subtitle">wasm <a href="https://github.com/sc0Vu/js-secp256k1">secp256k1</a> <a href="https://github.com/sc0Vu/js-keccak-tiny">keccak tiny</a></h2>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h1 class="title">Network related</h1>
+        <h2 class="subtitle">simtunnel <a href="https://github.com/sc0Vu/simtunnel">link</a></h2>
+        <h2 class="subtitle">socks6 <a href="https://github.com/sc0Vu/socks6">link</a></h2>
+        <h2 class="subtitle">proxysettings <a href="https://github.com/sc0Vu/proxy-settings">link</a></h2>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h1 class="title">Platform related</h1>
+        <h2 class="subtitle">www.moxbii.com <a href="https://www.moxbii.com">link</a></h2>
+        <h2 class="subtitle">tripmoment.com <a href="https://tripmoment.com">link</a></h2>
+        <h2 class="subtitle">www.kolnetworks.com <a href="https://www.kolnetworks.com">link</a></h2>
+        <h2 class="subtitle">www.avoice.io <a href="https://www.avoice.io">link</a></h2>
+      </div>
+    </section>
+
+    <footer class="footer m-4">
+      <div class="container">
+        <p>Made with <span class="bd-emoji">❤️</span> by <strong><a href="https://medium.com/@sc0vu" target="_blank">Peter Lai</a></strong></p>
+        <p>CSS framework: <strong><a href="http://bulma.io/" target="_blank">bulma</a></strong></p>
+      </div>
+    </footer>
   </body>
 </html>
