Add demo page for keccak tiny wasm

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2 class="subtitle">diode.io <a href="https://github.com/diodechain">link</a></h2>
         <h2 class="subtitle">web3p <a href="https://github.com/web3p">link</a></h2>
         <h2 class="subtitle">frontend <a href="https://github.com/sc0vu/vuethwallet">vuethwallet</a> <a href="https://github.com/sc0vu/vuethexplore">vuethexplore</a></h2>
-        <h2 class="subtitle">wasm <a href="https://github.com/sc0Vu/js-secp256k1">secp256k1</a> <a href="https://github.com/sc0Vu/js-keccak-tiny">keccak tiny</a></h2>
+        <h2 class="subtitle">wasm <a href="keccak.html">keccak tiny</a> <a href="https://github.com/sc0Vu/js-secp256k1">secp256k1</a></h2>
       </div>
     </section>
 
