Add DNS over HTTPS/TLS client

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <h2 class="subtitle">simtunnel <a href="https://github.com/sc0Vu/simtunnel">link</a></h2>
         <h2 class="subtitle">socks6 <a href="https://github.com/sc0Vu/socks6">link</a></h2>
         <h2 class="subtitle">proxysettings <a href="https://github.com/sc0Vu/proxy-settings">link</a></h2>
+        <h2 class="subtitle">DNS over HTTPS/TLS client <a href="https://github.com/sc0Vu/doh-js-client">link</a></h2>
       </div>
     </section>
 
