--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <h2 class="subtitle">web3p <a href="https://github.com/web3p">link</a></h2>
         <h2 class="subtitle">frontend <a href="https://github.com/sc0vu/vuethwallet">vuethwallet</a> <a href="https://github.com/sc0vu/vuethexplore">vuethexplore</a></h2>
         <h2 class="subtitle">wasm <a href="keccak.html">keccak tiny</a> <a href="https://github.com/sc0Vu/js-secp256k1">secp256k1</a></h2>
+        <h2 class="subtitle">ethwatcher <a href="https://github.com/sc0Vu/ethwatcher">link</a></h2>
       </div>
     </section>
 
@@ -59,6 +60,13 @@
       </div>
     </section>
 
+    <section class="section">
+      <div class="container">
+        <h1 class="title">Embeded related</h1>
+        <h2 class="subtitle">GO mbedtls [working]<a href="https://github.com/sc0Vu/go-mbedtls">link</a></h2>
+      </div>
+    </section>
+    
     <section class="section">
       <div class="container">
         <h1 class="title">Platform related</h1>
