--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <h2 class="subtitle">frontend <a href="https://github.com/sc0vu/vuethwallet">vuethwallet</a> <a href="https://github.com/sc0vu/vuethexplore">vuethexplore</a></h2>
         <h2 class="subtitle">wasm <a href="keccak.html">keccak tiny</a> <a href="https://github.com/sc0Vu/js-secp256k1">secp256k1</a></h2>
         <h2 class="subtitle">ethwatcher <a href="https://github.com/sc0Vu/ethwatcher">link</a></h2>
+        <h2 class="subtitle">ethereum abi encoder <a href="abi.html">link</a></h2>
       </div>
     </section>
 
