--- a/isphishing.html
+++ b/isphishing.html
@@ -32,7 +32,7 @@
       <div class="container">
         <h1 class="title">Try it!</h1>
         <h2 class="subtitle">
-          Type domain name and check.
+          Type domain name and check whether it's phishing website or not.
         </h2>
 
         <div id="check-notification" class="notification is-hidden"></div>
