--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h2 class="subtitle">ethwatcher <a href="https://github.com/sc0Vu/ethwatcher">link</a></h2>
         <h2 class="subtitle">ethereum abi encoder <a href="abi.html">link</a></h2>
         <h2 class="subtitle">is phishing website <a href="isphishing.html">link</a></h2>
+        <h2 class="subtitle">encoding <a href="decodebech32unsafe.html">decode bitcoin bech32 to hex</a></h2>
       </div>
     </section>
 
